--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,5 @@
-@import './constants/mediaQueries.scss';
-@import './constants/mixins.scss';
-@import './constants/variables.scss';
+@import './constants/mediaQueries';
+@import './constants/mixins';
+@import './constants/variables';
 @import './sass/base';
 @import './sass/layout';
