--- a/src/components/dashboard/workspacesList/workspaceItem.module.scss
+++ b/src/components/dashboard/workspacesList/workspaceItem.module.scss
@@ -1,7 +1,10 @@
 .container {
   font-size: 24px;
-  width: 100%;
   background-color: blue;
   padding: 20px 0;
   margin: 10px 0;
+}
+
+.workspaceTitle {
+  font-size: $font-medium;
 }
