--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -17,3 +17,8 @@ $font-text: 'Roboto', sans-serif;
 $font-big: 2.8rem;
 $font-medium: 2.2rem;
 $font-small: 1.8rem;
+
+$radius-big: 25px;
+$radius-medium: 15px;
+$radius-small: 8px;
+$radius-circle: 50%;
