--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: #0000;
+  --color-primary: #161a2d;
   --color-primary--dark: #ebebeb;
   --color-highlight: #f25287;
   --color-dark: #1a1a2e;
