--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -1,5 +1,7 @@
 $color-primary: var(--color-primary);
 $color-primary--dark: var(--color-primary--dark);
+$color-primary--light: var(--color-primary--light);
+$color-menu--highlight: var(--color-menu--highlight);
 $color-highlight: var(--color-highlight);
 $color-highlight-light: #ffab9d;
 $color-dark: var(--color-dark);
@@ -22,3 +24,14 @@ $radius-big: 25px;
 $radius-medium: 15px;
 $radius-small: 8px;
 $radius-circle: 50%;
+
+$margin-big: 4rem;
+$margin-medium: 2rem;
+$margin-small: 1.6rem;
+$margin-vsmall: 0.8rem;
+$margin-xxsmall: 0.4rem;
+
+$padding-big: 4rem;
+$padding-medium: 2rem;
+$padding-small: 1.6rem;
+$padding-vsmall: 0.8rem;
