--- a/src/containers/styles/DashboardContainer.module.scss
+++ b/src/containers/styles/DashboardContainer.module.scss
@@ -1,5 +1,7 @@
 .container {
   display: flex;
-  padding: 10px;
   height: 100%;
+  background: linear-gradient(0.05deg, #212844 99.96%, rgba(149, 155, 179, 0) 169.69%);
+  position: relative;
+  overflow: hidden;
 }
