--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -1,6 +1,8 @@
 :root {
   --color-primary: #161a2d;
   --color-primary--dark: #ebebeb;
+  --color-primary--light: #ebebeb;
+  --color-menu--highlight: rgba(201, 67, 67, 0.7);
   --color-highlight: #f25287;
   --color-dark: #1a1a2e;
   --color-accent: #bebec6;
