--- a/src/components/dashboard/columns/ColumnItem.module.scss
+++ b/src/components/dashboard/columns/ColumnItem.module.scss
@@ -10,3 +10,9 @@
   min-width: fit-content;
   box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.25);
 }
+
+.taskList {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
