sign up simple styling

--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -16,9 +16,12 @@ $color-placeholder: var(--color-placeholder);
 $font-headings: 'Anton', sans-serif;
 $font-text: 'Roboto', sans-serif;
 
+$font-xl: 3.2rem;
 $font-big: 2.8rem;
 $font-medium: 2.2rem;
 $font-small: 1.8rem;
+$font-text: 1.6rem;
+$font-small-text: 1.4rem;
 
 $radius-big: 25px;
 $radius-medium: 15px;
