--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -12,10 +12,12 @@ $color-text-light: var(--text-light);
 $color-error: var(--color-error);
 $color-alert: var(--color-alert);
 $color-placeholder: var(--color-placeholder);
+$color-light: var(--color-light);
 
-$font-headings: 'Anton', sans-serif;
-$font-text: 'Roboto', sans-serif;
+$font-headings: 'Oswald', sans-serif;
+$font-text: 'Cantarell', sans-serif;
 
+$font-hero: 8.6rem;
 $font-xl: 3.2rem;
 $font-big: 2.8rem;
 $font-medium: 2.2rem;
