--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -1,9 +1,9 @@
 :root {
-  --color-primary: #161a2d;
+  --color-primary: #222944;
   --color-primary--dark: #ebebeb;
-  --color-primary--light: #ebebeb;
+  --color-primary--light: #2b3456;
   --color-menu--highlight: rgba(201, 67, 67, 0.7);
-  --color-highlight: #f25287;
+  --color-highlight: #4eafa9;
   --color-dark: #1a1a2e;
   --color-accent: #bebec6;
   --color-accent--text: #b5b5b5;
@@ -12,4 +12,5 @@
   --color-error: #d43232;
   --color-alert: #c9af5e;
   --color-placeholder: #a3a3a3;
+  --color-light: #ebebeb;
 }
