--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,7 @@
-@import './constants/mediaQueries';
 @import './constants/mixins';
 @import './constants/variables';
 @import './sass/base';
 @import './sass/layout';
+@import './constants/mediaQueries';
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:wght@400;700&display=swap');
