--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -17,7 +17,8 @@ $color-light: var(--color-light);
 $font-headings: 'Oswald', sans-serif;
 $font-text: 'Cantarell', sans-serif;
 
-$font-hero: 8.6rem;
+$font-hero: 6.8rem;
+$font-xxl: 4.2rem;
 $font-xl: 3.2rem;
 $font-big: 2.8rem;
 $font-medium: 2.2rem;
