--- a/src/components/dashboard/navigation/workspaceNavigation/workspacesList/ProjectItem.module.scss
+++ b/src/components/dashboard/navigation/workspaceNavigation/workspacesList/ProjectItem.module.scss
@@ -1,7 +1,7 @@
 .container {
   width: max-content;
-  padding: $padding-small;
-  margin: $margin-small 0;
+  padding: 1.1rem;
+  margin: 1rem 0;
   list-style: none;
   cursor: pointer;
 }
