--- a/src/components/dashboard/navigation/workspaceNavigation/workspacesList/WorkspaceItem.module.scss
+++ b/src/components/dashboard/navigation/workspaceNavigation/workspacesList/WorkspaceItem.module.scss
@@ -13,7 +13,12 @@
   display: flex;
   width: 100%;
   background-color: $color-primary;
-  padding: 2rem;
+  padding: 1rem 2rem;
   justify-content: space-between;
+  align-items: center;
   border-radius: $radius-small;
+}
+
+.workspaceProjectList {
+  margin-left: 16px;
 }
