--- a/src/components/ui/misc/Flare.module.scss
+++ b/src/components/ui/misc/Flare.module.scss
@@ -1,11 +1,11 @@
 .flare {
-  position: absolute;
-  background: radial-gradient(
-    50% 50% at 50% 50%,
-    rgba(238, 116, 116, 0.25) 0%,
-    rgba(170, 50, 50, 0) 100%
-  );
-  z-index: 0;
+  // position: absolute;
+  // background: radial-gradient(
+  //   50% 50% at 50% 50%,
+  //   rgba(238, 116, 116, 0.25) 0%,
+  //   rgba(170, 50, 50, 0) 100%
+  // );
+  // z-index: 0;
 
-  filter: blur(60px);
+  // filter: blur(60px);
 }
