--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -1,4 +1,5 @@
 $color-primary: var(--color-primary);
+$color-primary-bg: var(--color-primary-bg);
 $color-primary--dark: var(--color-primary--dark);
 $color-primary--light: var(--color-primary--light);
 $color-menu--highlight: var(--color-menu--highlight);
