--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -1,5 +1,6 @@
 :root {
   --color-primary: #161a2d;
+  --color-primary-bg: #0d1021c2;
   --color-primary--dark: #ebebeb;
   --color-primary--light: #ebebeb;
   --color-menu--highlight: rgba(201, 67, 67, 0.7);
