--- a/src/components/dashboard/columns/ColumnItem.module.scss
+++ b/src/components/dashboard/columns/ColumnItem.module.scss
@@ -5,9 +5,7 @@
   border-radius: $radius-small;
   display: flex;
   align-items: center;
-  min-width: -moz-fit-content;
-  min-width: -webkit-fill-available;
-  min-width: fit-content;
+  min-width: 300px;
   box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.25);
 }
 
@@ -15,4 +13,15 @@
   list-style: none;
   display: flex;
   flex-direction: column;
+  background: #181a2aa6;
+  border-radius: 8px;
+  padding: 0 20px;
+  max-height: 600px;
+  overflow: auto;
+}
+
+.headline {
+  text-transform: uppercase;
+  font-size: 13px;
+  margin-right: auto;
 }
