--- a/src/components/dashboard/navigation/mainNavigation/MainNavigationItem.module.scss
+++ b/src/components/dashboard/navigation/mainNavigation/MainNavigationItem.module.scss
@@ -1,27 +1,19 @@
 .navigationItem {
-  margin-top: 2rem;
-  padding: 1rem 0;
+  margin-top: 4rem;
+  padding: 0rem 2rem;
+  border: 2px solid transparent;
+  height: 30px;
   display: flex;
   justify-content: center;
   width: 100%;
 
   button {
+    width: 100%;
     background-color: transparent;
     border: none;
   }
 }
 
 .activeNavItem {
-  position: relative;
-
-  &:after {
-    content: '';
-    position: absolute;
-    left: calc(100% + 1.6rem);
-    top: 50%;
-    transform: translate(-50%, -50%);
-    height: 100%;
-    width: 0.2rem;
-    background-color: $color-menu--highlight;
-  }
+  border-right: 2px solid $color-menu--highlight;
 }
