--- a/src/components/dashboard/navigation/workspaceNavigation/workspacesList/WorkspaceList.module.scss
+++ b/src/components/dashboard/navigation/workspaceNavigation/workspacesList/WorkspaceList.module.scss
@@ -1,3 +1,11 @@
+.container {
+  max-height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 20px;
+  min-width: 300px;
+}
+
 .title {
   font-size: $font-medium;
 }
