--- a/src/components/ui/buttons/PrimaryButton.module.scss
+++ b/src/components/ui/buttons/PrimaryButton.module.scss
@@ -6,5 +6,5 @@
   justify-content: center;
   align-items: center;
   padding: $margin-small $margin-medium;
-  border-radius: $radius-small;
+  border-radius: 25px;
 }
