--- a/src/containers/styles/MainNavContainer.module.scss
+++ b/src/containers/styles/MainNavContainer.module.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: $color-primary;
-  padding: 4rem 1rem;
+  background: $color-primary-bg;
+  padding: 0;
   border-radius: 25px;
+  padding: 4rem 0;
 }
