--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -1,14 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:wght@400;700&display=swap');
+
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  font-family: 'Cantarell', sans-serif;
 }
 
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  font-family: 'Cantarell', sans-serif;
 }
 
 body {
@@ -23,7 +27,7 @@ body {
   }
   body {
     color: white;
-    background: black;
+    background: #212844;
   }
 }
 
@@ -59,8 +63,51 @@ main {
   height: 100%;
   position: relative;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+svg,
+button {
+  transition: 0.3s;
 }
 
 button {
   cursor: pointer;
+
+  &:hover {
+    color: #f25287;
+
+    svg {
+      color: #f25287 !important;
+    }
+  }
+}
+
+li::marker {
+  content: '';
+  display: none;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 50px;
+  background: #1a1c2d;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #8e8ca0;
+  outline: 1px solid #1a1c2d;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-button {
+  // width: 10px;
+  text-align: left;
 }
