--- a/src/components/dashboard/navigation/workspaceNavigation/workspacesList/WorkspaceItem.module.scss
+++ b/src/components/dashboard/navigation/workspaceNavigation/workspacesList/WorkspaceItem.module.scss
@@ -12,7 +12,7 @@
 .workspaceManage {
   display: flex;
   width: 100%;
-  background-color: $color-primary;
+  background-color: $color-primary--dark;
   padding: 1rem 2rem;
   justify-content: space-between;
   align-items: center;
