--- a/src/components/ui/buttons/AddButton.module.scss
+++ b/src/components/ui/buttons/AddButton.module.scss
@@ -1,7 +1,7 @@
 .addButton {
   border-radius: $radius-circle;
   padding: $padding-vsmall;
-  background-color: $color-primary--light;
+  background-color: $color-light;
   color: $color-primary;
   border: none;
   box-sizing: border-box;
