--- a/src/components/ui/buttons/PrimaryButton.module.scss
+++ b/src/components/ui/buttons/PrimaryButton.module.scss
@@ -1,7 +1,7 @@
 .primaryButton {
   border: none;
-  background-color: $color-primary;
-  color: $color-primary--light;
+  background-color: $color-primary--dark;
+  color: $color-light;
   display: flex;
   justify-content: center;
   align-items: center;
