--- a/src/components/ui/inputs/SearchInput.module.scss
+++ b/src/components/ui/inputs/SearchInput.module.scss
@@ -3,7 +3,7 @@
   margin: 0px 20px 30px;
 }
 .searchInput {
-  background-color: $color-primary;
+  background-color: $color-primary--dark;
   border: none;
   padding: 14px $padding-medium;
   border-radius: 15px;
