--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -24,7 +24,7 @@ body {
   ::-moz-selection {
     /* Code for Firefox */
     color: $color-light;
-    background: $color-primary--light;
+    background: #212844;
   }
 
   ::selection {
