--- a/src/components/dashboard/columns/ColumnItem.module.scss
+++ b/src/components/dashboard/columns/ColumnItem.module.scss
@@ -1,10 +1,12 @@
 .columnItem {
   font-size: $font-medium;
-  background-color: $color-primary;
+  background-color: $color-primary--dark;
   padding: 1rem 2rem;
-  border-radius: $radius-small;
+  border-top-left-radius: $radius-small;
+  border-top-right-radius: $radius-small;
   display: flex;
   align-items: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   min-width: 300px;
   box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.25);
 }
@@ -13,8 +15,10 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  background: #181a2aa6;
-  border-radius: 8px;
+  // background: #181a2aa6;
+  background: $color-primary--dark;
+  border-bottom-left-radius: $radius-small;
+  border-bottom-right-radius: $radius-small;
   padding: 0 20px;
   max-height: 600px;
   overflow: auto;
