--- a/src/components/ui/buttons/MoreButton.module.scss
+++ b/src/components/ui/buttons/MoreButton.module.scss
@@ -1,13 +1,13 @@
 .moreButton {
   display: flex;
-  color: $color-primary--light;
+  color: $color-light;
   background-color: transparent;
   border: none;
 
   &_dot {
     height: 0.4rem;
     width: 0.4rem;
-    background-color: $color-primary--light;
+    background-color: $color-light;
     border-radius: 50%;
     display: inline-block;
 
