--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -1,8 +1,8 @@
 :root {
-  // --color-primary: #222944;
-  --color-primary: #161a2d;
+  --color-primary: #222944;
+  // --color-primary: #161a2d;
   --color-primary-bg: #0d1021c2;
-  --color-primary--dark: #ebebeb;
+  --color-primary--dark: #161a2d;
   --color-primary--light: #2b3456;
   --color-menu--highlight: rgba(201, 67, 67, 0.7);
   --color-highlight: #4eafa9;
