--- a/src/containers/main/styles/SplineImage.module.scss
+++ b/src/containers/main/styles/SplineImage.module.scss
@@ -1,6 +1,9 @@
 .spline {
   transform: translate(-50%, -50%) scale(0.6);
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
+  height: 50vh;
+  width: 50vw;
+  background: red;
 }
