spline image fix position

--- a/src/containers/main/styles/SplineImage.module.scss
+++ b/src/containers/main/styles/SplineImage.module.scss
@@ -1,8 +1,6 @@
 .spline {
-  transform: translate(-50%, -50%), scale(0.6);
-  position: relative;
+  transform: translate(-50%, -50%) scale(0.6);
+  position: absolute;
   top: 50%;
   left: 50%;
-  height: 100%;
-  width: 100%;
 }
