--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -5,7 +5,7 @@
   --color-primary--dark: #161a2d;
   --color-primary--light: #2b3456;
   --color-menu--highlight: rgba(201, 67, 67, 0.7);
-  --color-highlight: #4eafa9;
+  --color-highlight: #f25287;
   --color-dark: #1a1a2e;
   --color-accent: #bebec6;
   --color-accent--text: #b5b5b5;
