--- a/src/components/dashboard/project/ProjectMember/ProjectMemberList.module.scss
+++ b/src/components/dashboard/project/ProjectMember/ProjectMemberList.module.scss
@@ -5,4 +5,10 @@
   button {
     margin-left: 2rem;
   }
+  .inviteButton {
+    padding: 8px 10px;
+    min-width: 140px;
+    font-size: 20px;
+    font-weight: bold;
+  }
 }
