--- a/src/components/dashboard/project/ProjectToolBar/ProjectToolBar.module.scss
+++ b/src/components/dashboard/project/ProjectToolBar/ProjectToolBar.module.scss
@@ -6,4 +6,20 @@
   border-top: 1px solid #42486073;
   border-bottom: 1px solid #42486073;
   margin-top: 20px;
+
+  .toolbarButton {
+    padding: 8px 10px;
+    min-width: 140px;
+    font-size: 15px;
+    font-weight: 'bold';
+  }
+
+  .filterButton {
+    padding: 8px 10px;
+    min-width: 140px;
+    margin-left: auto;
+    margin-right: 105px;
+    font-size: 15px;
+    font-weight: bold;
+  }
 }
