--- a/src/components/dashboard/tasks/TaskItem.module.scss
+++ b/src/components/dashboard/tasks/TaskItem.module.scss
@@ -1,17 +1,13 @@
 .taskItem {
   width: 260px;
-  height: 110px;
+  min-height: 110px;
   display: block;
   background: #43445b;
   border-radius: 8px;
   margin-right: 0;
   margin-left: 0;
   margin-top: 20px;
-  /* margin-top: 20px; */
+  margin-top: 20px;
   padding: 10px;
   margin-left: 0px !important;
-
-  &:last-of-type {
-    margin-bottom: 20px;
-  }
 }
