--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -21,6 +21,14 @@ body {
   min-height: 100vh;
   font-family: 'Cantarell', sans-serif;
 
+  input:-webkit-autofill,
+  input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+  }
+  input[data-autocompleted] {
+    background-color: transparent !important;
+  }
+
   ::-moz-selection {
     /* Code for Firefox */
     color: $color-light;
