--- a/src/components/ui/modals/DashboardModal.module.scss
+++ b/src/components/ui/modals/DashboardModal.module.scss
@@ -54,3 +54,12 @@
     }
   }
 }
+
+.backdrop {
+  height: 100%;
+  width: 100%;
+  top: 0;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 2;
+}
