fix socket communication

--- a/src/components/ui/modals/DashboardModal.module.scss
+++ b/src/components/ui/modals/DashboardModal.module.scss
@@ -42,7 +42,7 @@
 
   .close {
     color: $color-primary;
-    font-size: $font-small;
+    font-size: 2rem;
     position: absolute;
     right: 2rem;
     top: 2rem;
