--- a/src/components/dashboard/columns/ColumnItem.module.scss
+++ b/src/components/dashboard/columns/ColumnItem.module.scss
@@ -1,7 +1,5 @@
 .columnContainer {
-  &:not(:first-of-type) {
-    margin-left: 2rem;
-  }
+  margin-left: 2rem;
 }
 
 .columnItem {
@@ -15,6 +13,8 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   min-width: 300px;
   box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.25);
+  z-index: 4;
+  position: relative;
 
   &:not(:first-of-type) {
     margin-left: $margin-medium;
