--- a/src/components/dashboard/columns/Columns.module.scss
+++ b/src/components/dashboard/columns/Columns.module.scss
@@ -11,10 +11,11 @@
 .columnsList {
   display: flex;
   width: 100%;
-  padding: 30px 20px;
+  padding: 30px 20px 30px 0;
   height: 100%;
   overflow-x: auto;
   overflow-y: hidden;
+  position: relative;
 }
 
 .addColumnButton {
@@ -82,4 +83,10 @@
 
 .columnsButton {
   margin-left: 2rem;
+}
+
+.columnPlaceholder {
+  background-color: $color-primary--light;
+  border-radius: $radius-small;
+  opacity: 0.4;
 }
