--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -3,6 +3,7 @@ $color-primary-bg: var(--color-primary-bg);
 $color-primary--dark: var(--color-primary--dark);
 $color-primary--light: var(--color-primary--light);
 $color-menu--highlight: var(--color-menu--highlight);
+$color-light-red: var(--color-light-red);
 $color-highlight: var(--color-highlight);
 $color-highlight-light: #ffab9d;
 $color-dark: var(--color-dark);
@@ -12,6 +13,7 @@ $color-shadow: var(--color-shadow);
 $color-text-light: var(--text-light);
 $color-error: var(--color-error);
 $color-alert: var(--color-alert);
+$color-success: var(--color-success);
 $color-placeholder: var(--color-placeholder);
 $color-light: var(--color-light);
 
@@ -26,6 +28,7 @@ $font-medium: 2.2rem;
 $font-small: 1.8rem;
 $font-text: 1.6rem;
 $font-small-text: 1.4rem;
+$font-vsmall: 1.2rem;
 
 $radius-big: 25px;
 $radius-medium: 15px;
