--- a/src/components/ui/modals/DashboardModal.module.scss
+++ b/src/components/ui/modals/DashboardModal.module.scss
@@ -4,9 +4,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 25vw;
-  height: 30vh;
+  min-height: 25vh;
   background-color: $color-light;
-  border-radius: $radius-big;
+  border-radius: $radius-small;
   z-index: 100;
   padding: $padding-big;
 
