--- a/src/components/dashboard/tasks/TaskItem.module.scss
+++ b/src/components/dashboard/tasks/TaskItem.module.scss
@@ -3,8 +3,8 @@
   display: block;
   background: $color-task;
   border-radius: $radius-small;
-  margin: $radius-medium 0 $radius-medium;
-  padding: $radius-medium;
+  margin: $margin-medium-px 0 $margin-medium-px;
+  padding: $padding-medium-px;
   font-size: $font-small-text;
   box-sizing: border-box;
   position: relative;
