--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -38,11 +38,13 @@ $margin-medium: 2rem;
 $margin-small: 1.6rem;
 $margin-vsmall: 0.8rem;
 $margin-xxsmall: 0.4rem;
+$margin-medium-px: 15px;
 
 $padding-big: 4rem;
 $padding-medium: 2rem;
 $padding-small: 1.6rem;
 $padding-vsmall: 0.8rem;
 $padding-vertical-medium: 2rem 1rem;
+$padding-medium-px: 15px;
 
 $button-width: 260px;
