fixed padding on task item

--- a/src/components/dashboard/tasks/AddTaskForm.module.scss
+++ b/src/components/dashboard/tasks/AddTaskForm.module.scss
@@ -10,7 +10,7 @@
   padding: 0;
 }
 .addTaskInput {
-  padding: $padding-vertical-medium;
+  padding: $padding-medium-px;
   border: none;
   outline: none;
   background-color: transparent;
