--- a/src/components/dashboard/tasks/TaskItem.module.scss
+++ b/src/components/dashboard/tasks/TaskItem.module.scss
@@ -6,7 +6,7 @@
   margin-top: $margin-medium-px;
   margin-right: 0;
   margin-left: 0;
-  padding: $padding-small;
+  padding: $padding-medium-px;
   font-size: $font-small-text;
   box-sizing: border-box;
   position: relative;
