--- a/styles/constants/mixins.scss
+++ b/styles/constants/mixins.scss
@@ -38,4 +38,14 @@
     flex-direction: column;
     align-items: center;
   }
+  @if $setLayout == flexBetween {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  @if $setLayout == flexEvenly {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 }
