--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -17,6 +17,7 @@ $color-success: var(--color-success);
 $color-placeholder: var(--color-placeholder);
 $color-light: var(--color-light);
 $color-task: var(--color-task);
+$color-over: var(--color-over);
 
 $font-headings: 'Oswald', sans-serif;
 $font-text: 'Cantarell', sans-serif;
