--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -17,4 +17,6 @@
   --color-placeholder: #a3a3a3;
   --color-light: #ebebeb;
   --color-success: #139133;
+  --color-task: #43445b;
+  --color-over: rgba(0, 0, 0, 0.4);
 }
