--- a/src/components/dashboard/project/ProjectMember/InviteMemberPopup.module.scss
+++ b/src/components/dashboard/project/ProjectMember/InviteMemberPopup.module.scss
@@ -19,3 +19,19 @@
   margin-top: $margin-vsmall;
   display: block;
 }
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loaderBackdrop {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: $color-over;
+}
