--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -16,4 +16,6 @@
   --color-placeholder: #a3a3a3;
   --color-light: #ebebeb;
   --color-task: #43445b;
+  --color-popup: #d9d9d9;
+  --text-dark: #313149;
 }
