--- a/src/components/dashboard/tasks/EditTaskPopup.module.scss
+++ b/src/components/dashboard/tasks/EditTaskPopup.module.scss
@@ -11,6 +11,7 @@
   @include flexLayout(flexStart);
   flex-direction: column;
   border-radius: $radius-small;
+  background-color: $color-popup;
 }
 .formButtons {
   width: 100%;
@@ -19,4 +20,33 @@
 .editForm {
   width: 100%;
   height: 100%;
+}
+.nameInput {
+  width: 100%;
+  border: none;
+  outline: none;
+  background: transparent;
+  border-radius: $radius-small;
+  &:hover,
+  &:active,
+  &:focus,
+  &:focus-within {
+    outline: 1px solid $color-accent;
+  }
+}
+.messageInput {
+  height: 70%;
+  width: 100%;
+  border-radius: $radius-small;
+  resize: none;
+  border: none;
+  color: $color-text-dark;
+  padding: $margin-small $margin-medium;
+  &:focus,
+  &:focus-within {
+    outline: none;
+  }
+}
+.nameLabel {
+  display: none;
 }
