--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -15,6 +15,8 @@ $color-alert: var(--color-alert);
 $color-placeholder: var(--color-placeholder);
 $color-light: var(--color-light);
 $color-task: var(--color-task);
+$color-popup: var(--color-popup);
+$color-text-dark: var(--text-dark);
 
 $font-headings: 'Oswald', sans-serif;
 $font-text: 'Cantarell', sans-serif;
