--- a/styles/constants/variables.scss
+++ b/styles/constants/variables.scss
@@ -19,6 +19,7 @@
   --color-success: #139133;
   --color-task: #43445b;
   --color-popup: #d9d9d9;
+  --color-popup-field: #d1d1d1;
   --text-dark: #313149;
   --color-over: rgba(0, 0, 0, 0.4);
 }
